# django-base

./: .env.example  README.md  pyproject.toml  ruff.toml
config/: settings.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
