[project]
name = "django-base"
version = "0.1.0"
description = "Django 6.0.1 base project with PostgreSQL, Docker, and uv"
requires-python = ">=3.13"
dependencies = [
    "django==6.0.1",
    "psycopg2-binary>=2.9.10",
    "django-environ>=0.11.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.5",
]

[dependency-groups]
dev = [
    "ruff>=0.8.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config"]
